{
    "name": "InputMaster",
    "maps": [
        {
            "name": "PlayerInputs",
            "id": "8bc00f11-aa78-4e53-a489-62a4ef2bed13",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "37b815a3-d816-40f8-b450-1a9973d7e55c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "c7e5447f-116c-4372-b9f6-fc8d063d9674",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb1e68f9-a273-4af1-96bc-c640460d0f87",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23c21a50-bc0d-4239-81c1-737609bd9638",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}